--- a/config/config.json
+++ b/config/config.json
@@ -2,21 +2,21 @@
   "development": {
     "username": "postgres",
     "password": "12345",
-    "database": "Coba_development",
+    "database": "Cars_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
     "password": "12345",
-    "database": "Coba_test",
+    "database": "Cars_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
     "username": "postgres",
     "password": "12345",
-    "database": "Coba_production",
+    "database": "Cars_production",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
